# newsscraper

./: Bachelor thesis (Megaport 2020-05-17).atlproj  Bachelor thesis_CD.xlsx  Source_Tables.xlsx  Topic Codes.xlsx  artikelkoppen_nl.txt  corona_lockerung_de.txt  corona_maatregelen_nl.txt  corona_mask_requirement.txt  corona_maskenpflicht_de.txt  corona_masker_nl.txt  corona_maßnahmen_de.txt  corona_measures_en.txt  corona_relaxation_en.txt  corona_tracking_app_de.txt  corona_tracking_app_en.txt  corona_tracking_app_nl.txt  corona_versoepeling_nl.txt  donald_trump_de.txt  donald_trump_en.txt  donald_trump_nl.txt  eu_de.txt  eu_en.txt  eu_nl.txt  headlines_en.txt  italie_nl.txt  italien_de.txt  italy_en.txt  news_de.txt  news_en.txt  pyproject.toml  schlagzeilen_de.txt  who_de.txt  who_en.txt  who_nl.txt
analysis/: artikelkoppen_nl_source_count.txt  corona_lockerung_de_source_count.txt  corona_maatregelen_nl_source_count.txt  corona_mask_requirement_source_count.txt  corona_maskenpflicht_de_source_count.txt  corona_masker_nl_source_count.txt  corona_maßnahmen_de_source_count.txt  corona_measures_en_source_count.txt  corona_relaxation_en_source_count.txt  corona_tracking_app_de_source_count.txt  corona_tracking_app_en_source_count.txt  corona_tracking_app_nl_source_count.txt  corona_versoepeling_nl_source_count.txt  donald_trump_de_source_count.txt  donald_trump_en_source_count.txt  donald_trump_nl_source_count.txt  eu_de_source_count.txt  eu_en_source_count.txt  eu_nl_source_count.txt  headlines_en_source_count.txt  italie_nl_source_count.txt  italien_de_source_count.txt  (+5 more)
(+159 files in other folders)
