[tool.poetry]
name = "newsscraper"
version = "0.1.0"
description = ""
authors = ["egidius <egidius@mysliwietz.de>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
